sd-wan, about us page done but needs revising

--- a/about_us.html
+++ b/about_us.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
-<title>AEQUOS - RIGHT-SIZE YOUR NETWORK</title>
+<title>AEQUOS - ABOUT US</title>
 <!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
 <!-- <script src="prefixfree.js"></script> -->
@@ -13,11 +13,10 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <!-- <link rel="stylesheet" type="text/css" href="css/slick.css"/>
 <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/> -->
-<!-- <link rel="shortcut icon" 
-      type="image/x-icon" 
-			href="images/favicon.ico"> -->
-<link rel="shortcut icon" href="favicon.ico?v=<?php echo filemtime('favicon.ico') ?>" />
-<script type="application/ld+json">
+<link rel="icon" 
+      type="image/png" 
+      href="images/favicon.png">
+	 <script type="application/ld+json">
 	{
 	  "@context": "http://schema.org",
 	  "@type": "Organization",
@@ -33,7 +32,7 @@
 			"@type": "Person",
 			"name": "Andy Weedon"
 		} ],
-	  "contactPoint": {
+		"contactPoint": {
 		"@type": "Contact",
 		"telephone": "0345 646 6060",
 		"email": "mailto:info@aequos.co.uk",
@@ -50,7 +49,7 @@
     "https://twitter.com/Aequossdwan"]
 	  }
 	}
-</script>
+	</script>
 	
 <!-- <meta name="google-site-verification" content="tj5-IRx0plSc-pKJrosM3LMwcN1rGrdcr0maVo3xJk0" /> -->
 <!-- Global site tag (gtag.js) - Google Ads: 780358687 -->
@@ -105,7 +104,7 @@ ga('send', 'pageview'); -->
 				</div>                                                           
 				<ul>
 					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html#home_section">HOME</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="services.html#servicesHome_section" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="sd-wan.html#SDhome_section" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="about_us.html#servicesHome_section" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="news.html" class="header-link">NEWS</a></li><p class="nav_line">|</p>
@@ -123,12 +122,11 @@ ga('send', 'pageview'); -->
 
 
 	<main class="flex-container" role="main">
-		<section id="home_section">
-			<img class="shape" src="images/shape.gif" alt="blue background abstract shape">
-			<div class="main_heading">
+		<section id="servicesHome_section">
+			<img class="shape shapeServiceHome" src="images/shapeAboutus.gif" alt="blue background abstract shape">
+			<div class="main_heading aboutMainH">
 				<h2>AEQUOS</h2>
-				<h1>RIGHT-SIZE <br>YOUR NETWORK</h1>
-				<h3>Aequos are the experts in using SD-WAN to deliver the right networking solutions and the right bandwidth at the right times.</h3>
+				<h1>ABOUT US</h1>
 			</div>
 			<div class="TFMlogo_heading">
 					<img alt="TFM Group Logo" class="TFMLogo" src="images/TFMlogo.png">
@@ -142,7 +140,7 @@ ga('send', 'pageview'); -->
 		</section>
 		<div id="heading_bottom">
 			<p>SEE MORE</p>
-			<a href="#services_section"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
+			<a href="#aboutUsVideo"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
 
 		</div>
 		<div class="chat">
@@ -151,115 +149,49 @@ ga('send', 'pageview'); -->
 		</div>
 			<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=42894&appID=3drApNnnYaVm7PfrtccS"></iframe>
 			<p aria-label="Close chat" role="button" class="close" onclick="closeChat()"> X</p>
-		<section id="services_section">
-			
-			<div class="subSection">
-					<h2>THE FUTURE OF NETWORKING</h2>
-				<p>Whatever the size of your company, whichever sector you work in, Aequos is a proven guide to the new world of cloud-based connectivity. We specialise in deploying next-generation SD-WAN to deliver right-sized networking solutions and bandwidth. We are here to make sure every application in every location fits your business priorities. Supports your objectives. And powers your growth.
-				</p>
-				<p id="model">Our business first model is designed to meet the demands of modern-day application and end-user requirements.</p>
-				<div class="servicesList">
-					<h3>WE OFFER THREE LEVELS OF SD-WAN
-							MANAGED SERVICE</h3>
-					<div class ="services_main">
-						<div class="serv_sections">
-							<h4>BRONZE SERVICE</h4>
-							<ul>
-								<li>Bandwidth</li>
-								<li>Infrastructure</li>
-								<li>Optional Scoping & Design</li>
-							</ul>
-							<a aria-label="Navigation to Services page Bronze Service" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
-						</div>
-						<div class="serv_sections">
-							<h4>SILVER SERVICE</h4>
-							<ul>
-									<li>Lifecycle Management</li>
-									<li>All Infrastructure & Bandwidth</li>
-									<li>Scoping & Design</li>
-									<li>Monitoring & Trends</li>
-								</ul>
-								<a aria-label="Navigation to Services page Silver Service" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
-						</div>
-						<div class="serv_sections">
-							<h4>GOLD SERVICE</h4>
-							<ul>
-									<li>Perimeter Security</li>
-									<li>Lifecycle Management</li>
-									<li>Application flows</li>
-									<li>All infrastructure & Bandwidth</li>
-									<li>Scoping & Design</li>
-									<li>Monitoring & Trends</li>
-								</ul>
-								<a aria-label="Navigation to Services page Gold Service" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
-						</div>
-					</div>
+
+		<section id="aboutUsVideo">
+				<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe title="Aequos introduce themselves and talk about their views and approaches" src='https://www.youtube.com/embed/NpEaa2P7qZI' frameborder='0' allowfullscreen></iframe></div>
+		</section>
+
+		<section id="aboutMainDescription">
+			<div class="sdHome aboutIntro">
+				<h2>INTRODUCING AEQUOS</h2>
+				<div class="sdHomeDescr networkDescr">
+					<p>Aequos is focused on one single, simple objective: Delivering the right-sized network, right now. From this, all else follows.</h3>
+					<p>We are a dynamic, privately owned and forward-thinking company, working closely with our customers to deliver innovation on a daily basis. </p>
+					<p>Committed and passionate about what we do, our innovative approach is constantly evolving in line with the ever-changing requirements of the modern business. Our business-first model meets the demands of complex application and end-user requirements, delivering agility, scalability and security. </p>
+					<p>We remain at the forefront of new technologies, deploying the latest advancements  to accelerate the implementation and maximise the value of our networking services.</p>
+					<p>As thought-leaders within the SD-WAN technology marketplace, our proven technology and services model enables companies of all sizes and across all sectors to exploit digital transformation.</p>
+					<a class="discoverServices" href="sd-wan.html">MORE ABOUT SD-WAN <i class='fas fa-angle-right'></i></a>
 				</div>
 			</div>
 		</section>
 
-		<section id="sdWan_section">
-			<div class="upsideShape">
-					<img class="shape upside" src="images/shapeTransBlack.gif" alt="blue background abstract shape">
-			</div>
-			<div class="sdHome">
-				<h2>SD-WAN IS THE NEW REALITY</h2>
-				<div class="sdHomeDescr">
-					<p>SD-WAN uses the advantages of cloud computing to transform the management of WANs through a single cloud-based console. Simple, streamlined, scalable, it empowers you to dynamically share bandwidth throughout your WAN. Remotely re-allocate it at will, rather than waiting for an on-site engineer to reconfigure it at local network level. And allocate it according to need, flexibly scaling up and down as required. </p>
-					<h3>Cloud-based connectivity transforms the way you manage your networks.</h3>
-					<a aria-label="Navigation to SD-WAN page" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
-				</div>
-				<div class="sdIconsHome">
-						<img alt="greater agility" id="agilityIcon" src="images/agility.png">
-						<img alt="increased performance" id="performanceIcon" src="images/performance.png">
-						<img alt="advanced control" id="controlIcon" src="images/control.png">
-						<img alt="robust security" id="securityIcon" src="images/security.png">
-						<img alt="third party extension" id="extensionIcon" src="images/extension.png">
-						<img alt="cloud ready" id="cloudIcon" src="images/cloud.png">
-				</div>
-			</div>
+		<section class="SDeasy">
+				<h2>AEQUOS ENSURES THAT	YOUR NETWORKING DECISIONS	ARE INFORMED, SUSTAINABLE AND	TUNED TO BUSINESS OBJECTIVES.</h2>
 		</section>
 
-		<section id="overview_section">
-			<div id="overviewCont">
-				<div class="partner">
-					<h2>WHY PARTNER WITH AEQUOS?</h2>
-					<p>We are a specialist cloud system integrator with a proven track record in creating the right-sized, application-centric, business-focused WAN that supports your move to Cloud and Software Defined technologies. </p>
-				</div>
-				<div class="reasonsHome">
-					<div class="reasonsHorizontal">
-						<div class="reasonScroll" id="default">
-							<h3>1 WE MANAGE SERVICES</h3>
-							<p>We deliver the overall coordination and orchestration services you need to tailor your network resources to the precise requirements of your specific business objectives. </p>
-						</div>
-						<div class="reasonScroll" id="first">
-							<h3>2 WE TRANSFORM APPLICATIONS</h3>
-							<p>We offer the proven expertise to make sure your legacy business applications and data continue to add value and support your ambitions in the new cloud landscape. </p>
-						</div>
-						<div class="reasonScroll" id="second">
-							<h3>3 WE MAKE THE CLOUD HAPPEN</h3>
-							<p>We seamlessly implement migration from legacy infrastructure to cloud services, providing you with the flexibility to rapidly select, build, and roll out native cloud applications.</p>
-						</div>
-						<div class="reasonScroll" id="third">
-							<h3>4 WE ARE SD-WAN SPECIALISTS</h3>			
-							<p>We scope, implement and enhance network infrastructure services that meet the requirements of pecialised sector practices and associated regulatory needs.</p>
-						</div>
-					</div>
-					<div class="reasonsEnd">
-						<h4>OUR EXPERTISE IN TECHNOLOGY IS MATCHED BY AN UNWAVERING FOCUS ON BUSINESS OUTCOMES. AND THAT’S WHAT MAKES US DIFFERENT.</h4>
-					</div>
-				
-				<div class="navReasons">
-					<button aria-label="reveals contents from right to left in descending order" class="toLeft"><img alt="Left arrow" class="navi leftArrow" src="images/left.png"></button>
-					<img alt="black dot refers to reason displayed for partnering with Aequos" class="navi blackDot" src="images/blackdot.png">
-					<img alt="white dot refers to reason hidden for partnering with Aequos" class="navi whiteDot" src="images/whitedot.png">
-					<img alt="white dot refers to reason hidden for partnering with Aequos" class="navi whiteDot" src="images/whitedot.png">
-					<img alt="white dot refers to reason hidden for partnering with Aequos" class="navi whiteDot" src="images/whitedot.png">
-					<button aria-label="reveals contents from left to right in ascending order" class="toRight"><img alt="Right arrow" class="navi rightArrow" src="images/right.png"></button>
-					<!-- <button><i class="fas fa-chevron-right"></i></button> -->
-				</div>
-				<a class="discoverServices">MORE ABOUT US <i class='fas fa-angle-right'></i></a>
+		<section id="aboutUsIconsSection">
+			<div class="aboutUsIcons">
+				<img alt="specialist industry insight icon" class="aboutIcons" src="images/specialist.png">
+				<h3>SPECIALIST</h3>
+				<p>Our specialist industry insight and proven models fast-track business success</p>
 			</div>
+			<div class="aboutUsIcons">
+				<img alt="painless transition to SD-WAN technologies icon" class="aboutIcons" src="images/painless.png">
+				<h3>PAINLESS</h3>
+				<p>We make the transition to SD-WAN technologies seamless and effective.</p>
+			</div>
+			<div class="aboutUsIcons">
+				<img alt="innovative next generation network icon" class="aboutIcons" src="images/innovative.png">
+				<h3>INNOVATIVE</h3>
+				<p>Our nextgen SD-WAN provide a solid foundation for innovation and growth.</p>
+			</div>
+			<div class="aboutUsIcons">
+				<img alt="bespoke right-sized business network icon" class="aboutIcons" src="images/bespoke.png">
+				<h3>BESPOKE</h3>			
+				<p>We focus on making sure you deploy the right-sized SD-WAN for your business. </p>
 			</div>
 		</section>
 
@@ -325,8 +257,8 @@ ga('send', 'pageview'); -->
 				</div>
 				<div class="sitemap">
 					<h3>AEQUOS</h3>
-					<a href="#home_section">Home</a>
-					<a href="services.html#servicesHome_section">Services</a>
+					<a href="index.html#home_section">Home</a>
+					<a href="services.html#servicesHome_section" >Services</a>
 					<a href="sd-wan.html#SDhome_section">SD-WAN</a>
 					<a href="about_us.html#servicesHome_section">About us</a>
 					<a>News</a>
