--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
-<title>AEQUOS - Services</title>
+<title>AEQUOS - SERVICES</title>
 <!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
 <!-- <script src="prefixfree.js"></script> -->
@@ -106,7 +106,7 @@ ga('send', 'pageview'); -->
 					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html#home_section">HOME</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="services.html#servicesHome_section" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="sd-wan.html#SDhome_section" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="about.html" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="about_us.html#servicesHome_section" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="news.html" class="header-link">NEWS</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="contact-us.html" class="header-link">CONTACT</a></li>						
 				</ul>
@@ -306,7 +306,7 @@ ga('send', 'pageview'); -->
 					<a href="index.html#home_section">Home</a>
 					<a href="services.html#servicesHome_section" >Services</a>
 					<a href="sd-wan.html#SDhome_section">SD-WAN</a>
-					<a>About us</a>
+					<a href="about_us.html#servicesHome_section">About us</a>
 					<a>News</a>
 					<a href="contact-us.html">Contact</a>
 				</div>
