--- a/sd-wan.html
+++ b/sd-wan.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
-<title>AEQUOS - Right-size your network</title>
+<title>AEQUOS - SD-WAN </title>
 <!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
 <!-- <script src="prefixfree.js"></script> -->
@@ -106,7 +106,7 @@ ga('send', 'pageview'); -->
 					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html#home_section">HOME</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="sd-wan.html#SDhome_section" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="about.html" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="about_us.html#servicesHome_section" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="news.html" class="header-link">NEWS</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="contact-us.html" class="header-link">CONTACT</a></li>						
 				</ul>
@@ -138,7 +138,7 @@ ga('send', 'pageview'); -->
 						<a class="cookie" href="privacy-policy.html" target="_blank">READ MORE <i class='fas fa-angle-right'></i></a>
 				</div> 
 		</section>
-		
+
 		<div id="heading_bottom">
 			<p>SEE MORE</p>
 			<a href="#SDwanMain"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
@@ -154,71 +154,164 @@ ga('send', 'pageview'); -->
 			<img class="sdImg" src="images/SDbenefits.png" alt="The benefits of SD-wan include: greater agility, increased performanc, advanced control, robust security, third party extension, cloud-first">
 			<img class="sdImgLarge" src="images/SDbenefitslarge.png" alt="The benefits of SD-wan include: greater agility, increased performanc, advanced control, robust security, third party extension, cloud-first">
 		</section>
+		<section class="SDeasy">
+			<h2>IMAGINE A NETWORK THAT LEARNS	EXACTLY WHAT YOUR BUSINESS NEEDS, THEN JUST MAKES IT HAPPEN.</h2>
+		</section>
 
-		<section id="sdWan_section">
-			<div class="upsideShape">
-					<img class="shape upside" src="images/shapeTransBlack.gif" alt="blue background abstract shape">
-			</div>
-			<div class="sdHome">
-				<h2>SD-WAN IS THE NEW REALITY</h2>
+		<section class="sdWanMainsection">
+			<div class="sdHome mainSDDescr">
+				<h2>WHAT IS <strong>SD-WAN?</strong></h2>
 				<div class="sdHomeDescr">
-					<p>SD-WAN uses the advantages of cloud computing to transform the management of WANs through a single cloud-based console. Simple, streamlined, scalable, it empowers you to dynamically share bandwidth throughout your WAN. Remotely re-allocate it at will, rather than waiting for an on-site engineer to reconfigure it at local network level. And allocate it according to need, flexibly scaling up and down as required. </p>
-					<h3>Cloud-based connectivity transforms the way you manage your networks.</h3>
-					<a aria-label="Navigation to SD-WAN page" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
-				</div>
-				<div class="sdIconsHome">
-						<img alt="greater agility" id="agilityIcon" src="images/agility.png">
-						<img alt="increased performance" id="performanceIcon" src="images/performance.png">
-						<img alt="advanced control" id="controlIcon" src="images/control.png">
-						<img alt="robust security" id="securityIcon" src="images/security.png">
-						<img alt="third party extension" id="extensionIcon" src="images/extension.png">
-						<img alt="cloud ready" id="cloudIcon" src="images/cloud.png">
+					<p>The cloud is all around us. Applications are now being distributed between in-house data centres, public clouds and SaaS providers. And the exponential growth of connected devices is driving the quest for ever better end-user experiences. Traditional WAN’s can no longer keep pace. It’s time for a new generation of networking.</p>
+					<h3>SD-WAN (Software Defined Wide Area Networking) meets the challenges to modern technology delivery.</h3>
+					<h4>SD-WAN combines two technologies:</h4>
+					<ol>
+						<li>1.	Software Defined Networking (SDN), designed for cloud datacenters.</li>
+						<li>2.	Wide Area Networking (WAN) – the network outside your office: e.g. the Internet, or a site-to-site network like MPLS or Metro Ethernet.</li>
+					</ol>
+					<p>By applying the advantages of cloud computing to the management of WANs, SD-WAN simplifies, streamlines and centralises the management of your network via a single cloud-based console. </p>
+					<p>In short, SD-WAN automatically prioritises bandwidth allocation based on your business needs, routing traffic along the most efficient path and scaling your network's bandwidth up and down as required.</p>
+					<p>It allows you to quickly reconfigure bandwidth when and where required, so forget about waiting for an on-site engineer to implement changes at a local network level. SD-WAN gives you the capability to react, adapt and make complex networking decisions in minutes rather than weeks.</p>
+					<p>SD-WAN also allows you to enhance or replace legacy networks such as MPLS with a new generation of secure, cloud-optimised, Internet-enabled connectivity. The result? Application-focused, user-centric networks optimised for your digital and cloud strategy.</p>
+					<p>Our managed SD-WAN services deliver the scale, the performance and the agility to support your evolving networking needs now and in the future.</p>
 				</div>
 			</div>
 		</section>
 
-		<section id="overview_section">
-			<div id="overviewCont">
-				<div class="partner">
-					<h2>WHY PARTNER WITH AEQUOS?</h2>
-					<p>We are a specialist cloud system integrator with a proven track record in creating the right-sized, application-centric, business-focused WAN that supports your move to Cloud and Software Defined technologies. </p>
-				</div>
-				<div class="reasonsHome">
-					<div class="reasonsHorizontal">
-						<div class="reasonScroll" id="default">
-							<h3>1 WE MANAGE SERVICES</h3>
-							<p>We deliver the overall coordination and orchestration services you need to tailor your network resources to the precise requirements of your specific business objectives. </p>
-						</div>
-						<div class="reasonScroll" id="first">
-							<h3>2 WE TRANSFORM APPLICATIONS</h3>
-							<p>We offer the proven expertise to make sure your legacy business applications and data continue to add value and support your ambitions in the new cloud landscape. </p>
-						</div>
-						<div class="reasonScroll" id="second">
-							<h3>3 WE MAKE THE CLOUD HAPPEN</h3>
-							<p>We seamlessly implement migration from legacy infrastructure to cloud services, providing you with the flexibility to rapidly select, build, and roll out native cloud applications.</p>
-						</div>
-						<div class="reasonScroll" id="third">
-							<h3>4 WE ARE SD-WAN SPECIALISTS</h3>			
-							<p>We scope, implement and enhance network infrastructure services that meet the requirements of pecialised sector practices and associated regulatory needs.</p>
-						</div>
-					</div>
-					<div class="reasonsEnd">
-						<h4>OUR EXPERTISE IN TECHNOLOGY IS MATCHED BY AN UNWAVERING FOCUS ON BUSINESS OUTCOMES. AND THAT’S WHAT MAKES US DIFFERENT.</h4>
-					</div>
-				
-				<div class="navReasons">
-					<button aria-label="reveals contents from right to left in descending order" class="toLeft"><img alt="Left arrow" class="navi leftArrow" src="images/left.png"></button>
-					<img alt="black dot refers to reason displayed for partnering with Aequos" class="navi blackDot" src="images/blackdot.png">
-					<img alt="white dot refers to reason hidden for partnering with Aequos" class="navi whiteDot" src="images/whitedot.png">
-					<img alt="white dot refers to reason hidden for partnering with Aequos" class="navi whiteDot" src="images/whitedot.png">
-					<img alt="white dot refers to reason hidden for partnering with Aequos" class="navi whiteDot" src="images/whitedot.png">
-					<button aria-label="reveals contents from left to right in ascending order" class="toRight"><img alt="Right arrow" class="navi rightArrow" src="images/right.png"></button>
-					<!-- <button><i class="fas fa-chevron-right"></i></button> -->
-				</div>
-				<a class="discoverServices">MORE ABOUT US <i class='fas fa-angle-right'></i></a>
-			</div>
+		<section id="shortCompareTech">
+			<div>
+					<table style="width:100%">
+							<tr>
+								<th></th>
+								<th class="thSDWan">MPLS<br><span>Outdated legacy system </span></th> 
+								<th class="thSDWan"> SD-WAN<br><span>Optimised for the cloud</span></th>
+							</tr>
+							<tr>
+								<th>Global Private Network</th>
+								<td><i class="fa fa-check" title="MPLS yes"></i></td>
+								<td><i class="fa fa-check" title="SD-WAN yes"></i></td>
+							</tr>
+							<tr>
+								<th>Quality of Service</th>
+								<td><i class="fa fa-check" title="MPLS yes"></i></td>
+								<td><i class="fa fa-check" title="SD-WAN yes"></i></td>
+							</tr>
+							<tr>
+								<th>99.9% Availability </th>
+								<td><i class="fa fa-check" title="MPLS yes"></i></td>
+								<td><i class="fa fa-check" title="SD-WAN yes"></i></td>
+							</tr>
+							<tr>
+								<th>Cloud SaaS Connectivity</th>
+								<td><i class="fas fa-times" title="MPLS no"></i></td>
+								<td><i class="fa fa-check" title="SD-WAN yes"></i></td>
+							</tr>
+							<tr>
+								<th>Encryption</th>
+								<td><i class="fas fa-times" title="MPLS no"></i></td>
+								<td><i class="fa fa-check" title="SD-WAN yes"></i></td>
+							</tr>
+							<tr>
+								<th>Single Day Deployment</th>
+								<td><i class="fas fa-times" title="MPLS no"></i></td>
+								<td><i class="fa fa-check" title="SD-WAN yes"></i></td>
+							</tr>
+							<tr>
+								<th>WAN Optimisation</th>
+								<td><i class="fas fa-times" title="MPLS no"></i></td>
+								<td><i class="fa fa-check" title="SD-WAN yes"></i></td>
+							</tr>
+							<tr>
+								<th>99.999% Availability</th>
+								<td><i class="fas fa-times" title="MPLS no"></i></td>
+								<td><i class="fa fa-check" title="SD-WAN yes"></i></td>
+							</tr>
+							<tr>
+								<th>Real-time Application</th>
+								<td><i class="fas fa-times" title="MPLS no"></i></td>
+								<td><i class="fa fa-check" title="SD-WAN yes"></i></td>
+							</tr>
+							<tr>
+								<th>Reporting</th>
+								<td><i class="fas fa-times" title="MPLS no"></i></td>
+								<td><i class="fa fa-check" title="SD-WAN yes"></i></td>
+							</tr>
+							<tr>
+								<th>Carrier Agnostic</th>
+								<td><i class="fas fa-times" title="MPLS no"></i></td>
+								<td><i class="fa fa-check" title="SD-WAN yes"></i></td>
+							</tr>
+							<tr>
+								<th>Instant Bandwidth Scaling </th>
+								<td><i class="fas fa-times" title="MPLS no"></i></td>
+								<td><i class="fa fa-check" title="SD-WAN yes"></i></td>
+							</tr>
+						</table>
 			</div>
 		</section>
+
+		<section class="sdWanMainsection">
+				<div class="sdHome mainSDDescr">
+					<h2>WHAT IS <strong>MPLS</strong></h2>
+					<div class="sdHomeDescr">
+						<p>Multiprotocol Label Switching (MPLS) was designed to ensure reliable connections for real-time applications. Providing a unified data-carrying service for both circuit-based and packet-switching clients, it supports a range of technologies rather than being tied to any one in particular.</p>
+						<p>So how does it work? In a traditional IP network, each router performs an IP lookup to determine a next-hop based on its routing table. The router then forwards the packet to that next-hop and so on until it reaches the final destination.</p>
+						<p>By contrast, MPLS directs data between nodes based on short path labels rather than long network addresses. The first router still performs a lookup, but instead of a next-hop it identifies the final destination route and the path to get there. It then creates a path label incorporating this information which is used to route traffic without the need to perform additional complex IP lookups, speeding up traffic flows.</p>
+						<p>MPLS is hard to classify, sitting between Layer 2 (data link layer) and Layer 3 (network layer) on the OSI model. That’s why it is often referred to as a Layer 2.5 networking protocol.</p>
+						<p>The advantages? MPLS has always been considered to make efficient use of bandwidth, reduce network congestion and enhance the end-user experience.</p>
+						<p>At the same time, MPLS is far more expensive than sending traffic over the public Internet. It’s not easy to find a global service provider – important for companies expanding into new markets. But above all, MPLS simply wasn’t designed to meet the needs of today’s cloud-based businesses.</p>
+					</div>
+				</div>
+			</section>
+
+			<section id="servicesSectors">
+					<div id="sectorsCont">
+						<h2>IN A NUTSHELL. <br>HOW SD-WAN SUPPORTS YOUR BUSINESS.</h2>
+						<div class="reasonsHome sector">
+							<div class="reasonsHorizontal">
+								<div class="reasonScroll" id="default">
+									<h3>1.	SD-WAN is agile</h3>
+									<p>The rapid rollout of WAN services to remote offices removes the need for on-site IT support. The bandwidth can easily be adjusted to match on business and application needs.</p>
+								</div>
+								<div class="reasonScroll" id="first">
+									<h3>2.	SD-WAN saves bandwidth </h3>
+									<p>Internet connection is readily available, quick to deploy, and comes at a much lower cost than equivalent MPLS networks. SD-WAN provides the reliability and security benefits of enterprise WAN services at Internet prices.</p>
+								</div>
+								<div class="reasonScroll" id="second">
+									<h3>3.	SD-WAN is optimised for the cloud</h3>
+									<p>SD-WAN frees you from the traditional constraints of MPLS networks. It bundles security, performance and connectivity between the cloud and the office, significantly improving the experience for users in remote offices when they use SaaS or cloud-based applications.</p>
+								</div>
+								<div class="reasonScroll" id="third">
+									<h3>4.	SD-WAN is completely secure</h3>			
+									<p>SD-WAN enables full visibility into who is using the network and what applications are being accessed, regardless of location or device. It also eliminates edge security appliances together with the complexity involved in managing this kind of estate.</p>
+								</div>
+								<div class="reasonScroll" id="fourth">
+										<h3>5.	SD-WAN is intelligent</h3>			
+										<p>Applications sensitive to latency, jitter or packet loss are dynamically allocated to high-performance bandwidth links based on real-time network conditions, with seamless sub-second failover to the next-best WAN path in the event of an outage. </p>
+								</div>
+								<div class="reasonScroll" id="fifth">
+										<h3>6.	SD-WAN increases reliability </h3>			
+										<p>SD-WAN ensures a high-quality branch office user experience for critical apps such as VoIP, VDI, video conferencing and app virtualisation solutions. Even the failure of an app’s primary path won’t result in an outage: SD-WAN prioritises the most critical apps to maintain quality of service. </p>
+								</div>
+								<div class="reasonScroll" id="sixth">
+										<h3>7.	SD-WAN improves visibility</h3>			
+										<p>SD-WAN allows broadband connections to deliver high-priority application traffic with the same reliability and quality of service as MPLS. It also offers deeper insight into application performance, where issues arise, and where bottlenecks inhibit performance.</p>
+								</div>
+							</div>
+						
+						<div class="navReasons">
+							<button aria-label="reveals contents from right to left in descending order" class="toLeftSector"><img alt="Left arrow" class="sectorsNavi leftArrow" src="images/leftwhite.png"></button>
+							<img alt="black dot refers to reason displayed for partnering with Aequos" class="sectorsNavi blueDot" src="images/bluedot.png">
+							<img alt="white dot refers to reason hidden for partnering with Aequos" class="sectorsNavi whiteDot" src="images/whitedot.png">
+							<img alt="white dot refers to reason hidden for partnering with Aequos" class="sectorsNavi whiteDot" src="images/whitedot.png">
+							<img alt="white dot refers to reason hidden for partnering with Aequos" class="sectorsNavi whiteDot" src="images/whitedot.png">
+							<button aria-label="reveals contents from left to right in ascending order" class="toRightSector"><img alt="Right arrow" class="sectorsNavi rightArrow" src="images/rightwhite.png"></button>
+							<!-- <button><i class="fas fa-chevron-right"></i></button> -->
+						</div>
+						<a class="discoverServices">MORE ABOUT US <i class='fas fa-angle-right'></i></a>
+					</div>
+					</div>
+				</section>
 
 		<section id="clients_section">
 			<div>
@@ -285,7 +378,7 @@ ga('send', 'pageview'); -->
 					<a href="#home_section">Home</a>
 					<a href="services.html#servicesHome_section">Services</a>
 					<a href="sd-wan.html#SDhome_section">SD-WAN</a>
-					<a>About us</a>
+					<a href="about_us.html#servicesHome_section">About us</a>
 					<a>News</a>
 					<a href="contact-us.html">Contact</a>
 				</div>
