--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ ga('send', 'pageview'); -->
 					<h3>AEQUOS</h3>
 				</div>                                                           
 				<ul>
-					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="#home_section">HOME</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html#home_section">HOME</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="sd-wan.html" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="about_us.html" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
@@ -167,7 +167,7 @@ ga('send', 'pageview'); -->
 								<li>Infrastructure</li>
 								<li>Optional Scoping & Design</li>
 							</ul>
-							<a aria-label="Navigation to Services page Bronze Service" class="discoverServices" href="">Discover More <i class="fas fa-angle-right"></i></a>
+							<a aria-label="Navigation to Services page Bronze Service" class="discoverServices" href="services.html">Discover More <i class="fas fa-angle-right"></i></a>
 						</div>
 						<div class="serv_sections">
 							<h4>SILVER SERVICE</h4>
@@ -177,7 +177,7 @@ ga('send', 'pageview'); -->
 									<li>Scoping & Design</li>
 									<li>Monitoring & Trends</li>
 								</ul>
-								<a aria-label="Navigation to Services page Silver Service" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
+								<a aria-label="Navigation to Services page Silver Service" class="discoverServices" href="services.html">Discover More <i class='fas fa-angle-right'></i></a>
 						</div>
 						<div class="serv_sections">
 							<h4>GOLD SERVICE</h4>
@@ -189,7 +189,7 @@ ga('send', 'pageview'); -->
 									<li>Scoping & Design</li>
 									<li>Monitoring & Trends</li>
 								</ul>
-								<a aria-label="Navigation to Services page Gold Service" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
+								<a aria-label="Navigation to Services page Gold Service" class="discoverServices" href="services.html">Discover More <i class='fas fa-angle-right'></i></a>
 						</div>
 					</div>
 				</div>
@@ -205,7 +205,7 @@ ga('send', 'pageview'); -->
 				<div class="sdHomeDescr">
 					<p>SD-WAN uses the advantages of cloud computing to transform the management of WANs through a single cloud-based console. Simple, streamlined, scalable, it empowers you to dynamically share bandwidth throughout your WAN. Remotely re-allocate it at will, rather than waiting for an on-site engineer to reconfigure it at local network level. And allocate it according to need, flexibly scaling up and down as required. </p>
 					<h3>Cloud-based connectivity transforms the way you manage your networks.</h3>
-					<a aria-label="Navigation to SD-WAN page" class="discoverServices" href="">Discover More <i class="fas fa-angle-right"></i></a>
+					<a aria-label="Navigation to SD-WAN page" class="discoverServices" href="sd-wan.html">Discover More <i class="fas fa-angle-right"></i></a>
 				</div>
 				<div class="sdIconsHome">
 						<img alt="greater agility" id="agilityIcon" src="images/agility.png">
@@ -256,7 +256,7 @@ ga('send', 'pageview'); -->
 					<button aria-label="reveals contents from left to right in ascending order" class="toRight"><img alt="Right arrow" class="navi rightArrow" src="images/right.png"></button>
 					<!-- <button><i class="fas fa-chevron-right"></i></button> -->
 				</div>
-				<a class="discoverServices">MORE ABOUT US <i class='fas fa-angle-right'></i></a>
+				<a href="about_us.html" class="discoverServices">MORE ABOUT US <i class='fas fa-angle-right'></i></a>
 			</div>
 			</div>
 		</section>
@@ -292,13 +292,13 @@ ga('send', 'pageview'); -->
 					</div>
 					<div class="cInfoSection emails">
 						<h3>CALL US AT</h3>
-						<p>0345 872 6060</p>
+						<p><a href="tel:0345 872 6060">0345 872 6060</a></p>
 						<h3>INFO</h3>
-						<p>info@aequos.co.uk</p>
+						<p><a href="mailto:info@aequos.co.uk">info@aequos.co.uk</a></p>
 						<h3>TECHNICAL SUPPORT</h3>
-						<p>servicedesk@aequos.co.uk</p>
+						<p><a href="mailto:servicedesk@aequos.co.uk">servicedesk@aequos.co.uk</a></p>
 						<h3>SALES</h3>
-						<p>sales@aequos.co.uk</p>
+						<p><a href="mailto:sales@aequos.co.uk">sales@aequos.co.uk</a></p>
 					</div>
 					<div class="cInfoSection social">
 						<h3>SOCIAL</h3>
@@ -318,12 +318,12 @@ ga('send', 'pageview'); -->
 					<h2>AEQUOS</h2>
 					<h4 class="copyright">Copyright © 2019 AEQUOS.<br>
 					All Rights Reserved. A TFM Group Company</h4>
-					<p>Terms of Use</p>
-					<p>Privacy Policy</p>
+					<p><a target="_blank" href="terms-of-use.html">Terms of Use</a></p>
+					<p><a target="_blank" href="privacy-policy.html">Privacy Policy</a></p>
 				</div>
 				<div class="sitemap">
 					<h3>AEQUOS</h3>
-					<a href="#home_section">Home</a>
+					<a href="index.html#home_section">Home</a>
 					<a href="services.html">Services</a>
 					<a href="sd-wan.html">SD-WAN</a>
 					<a href="about_us.html">About us</a>
@@ -332,7 +332,7 @@ ga('send', 'pageview'); -->
 				</div>
 				<div class="footerTFM">
 						<h3>TFM GROUP</h3>
-						<a target="_blank" href="http://www.tfmnetworks.com/" >Home</a>
+						<a target="_blank" href="http://www.tfmnetworks.com/">Home</a>
 						<a target="_blank" href="http://www.tfmnetworks.com/products/">Products</a>
 						<a target="_blank" href="http://www.tfmnetworks.com/services/">Services</a>
 						<a target="_blank" href="https://tfmnetworks.livevacancies.co.uk/#/">Careers</a>
