--- a/terms-of-use copy.html
+++ b/terms-of-use copy.html
@@ -102,9 +102,9 @@ ga('send', 'pageview'); -->
 					<h3>AEQUOS</h3>
 				</div>                                                           
 				<ul>
-					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html">HOME</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="sd-wan.html" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html#home_section">HOME</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="services.html#servicesHome_section" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="sd-wan.html#SDhome_section" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="about_us.html#servicesHome_section" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="news.html" class="header-link">NEWS</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="contact-us.html" class="header-link">CONTACT</a></li>						
@@ -121,11 +121,11 @@ ga('send', 'pageview'); -->
 
 
 	<main class="flex-container" role="main">
-		<section id="servicesHome_section">
-			<img class="shape shapeServiceHome" src="images/shapeAboutus.gif" alt="blue background abstract shape">
-			<div class="main_heading aboutMainH">
+		<section id="termsSection">
+			<img class="shape termsShape" src="images/shapeAboutus.gif" alt="blue background abstract shape">
+			<div class="main_heading termsHead">
 				<h2>AEQUOS</h2>
-				<h1>ABOUT US</h1>
+				<h1>TERMS OF USE</h1>
 			</div>
 			<div class="TFMlogo_heading">
 					<img alt="TFM Group Logo" class="TFMLogo" src="images/TFMlogo.png">
@@ -137,11 +137,7 @@ ga('send', 'pageview'); -->
 				</div> 
 			
 		</section>
-		<div id="heading_bottom">
-			<p>SEE MORE</p>
-			<a href="#aboutUsVideo"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
-
-		</div>
+	
 		<div class="chat">
 				<img alt="Lets chat bubble above chat icon" class="chattext" src="images/chattext.png">
 				<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble" onclick="openChat()" src="images/chatbubble.png">
@@ -149,101 +145,30 @@ ga('send', 'pageview'); -->
 			<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=42894&appID=3drApNnnYaVm7PfrtccS"></iframe>
 			<p aria-label="Close chat" role="button" class="close" onclick="closeChat()"> X</p>
 
-		<section id="aboutUsVideo">
-				<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe title="Aequos introduce themselves and talk about their views and approaches" src='https://www.youtube.com/embed/NpEaa2P7qZI' frameborder='0' allowfullscreen></iframe></div>
-		</section>
-
-		<section id="aboutMainDescription">
-			<div class="sdHome aboutIntro">
-				<h2>INTRODUCING AEQUOS</h2>
-				<div class="sdHomeDescr networkDescr">
-					<p>Aequos is focused on one single, simple objective: Delivering the right-sized network, right now. From this, all else follows.</h3>
-					<p>We are a dynamic, privately owned and forward-thinking company, working closely with our customers to deliver innovation on a daily basis. </p>
-					<p>Committed and passionate about what we do, our innovative approach is constantly evolving in line with the ever-changing requirements of the modern business. Our business-first model meets the demands of complex application and end-user requirements, delivering agility, scalability and security. </p>
-					<p>We remain at the forefront of new technologies, deploying the latest advancements  to accelerate the implementation and maximise the value of our networking services.</p>
-					<p>As thought-leaders within the SD-WAN technology marketplace, our proven technology and services model enables companies of all sizes and across all sectors to exploit digital transformation.</p>
-					<a class="discoverServices" href="sd-wan.html">MORE ABOUT SD-WAN <i class='fas fa-angle-right'></i></a>
-				</div>
+		
+		<section id="terms_section">
+			<div class="termsContent">
+				<h2>TERMS AND CONDITIONS FOR USE OF WEBSITE</h2>
+				<ol>
+					<li>These terms and conditions apply to the use of this website. By using this website you confirm you have understood and agreed to be bound by all of these terms and conditions.</li>
+					<li>This website is the property of TFM Networks Limited.</li>
+					<li>All content and material on this website are subject to copyright with all rights reserved. No part of this website may be published, transmitted, reproduced or stored on another website or in any other electronic form without obtaining our prior written permission.</li>
+					<li>We try to ensure that this website is free from viruses but accept no liability for any damage to hardware, software, data or other property resulting from your access to or use of this website.</li>
+					<li>Although we try to ensure that information on this website is correct, we make no representation or warranty that the information contained on the website is accurate, reliable or complete.</li>
+					<li>We shall not be liable, to the fullest extent that we are able to exclude such liability by law, for any damages or losses whatsoever from the use or inability to use this website or from any content contained on it.</li>
+					<li>We try to ensure 24-hour access to this website but we will not accept any liability if for any reason this website (or any part of it) is unavailable at any time.</li>
+					<li>We are committed at all times to ensuring that your privacy is protected. Should we ask you to provide information about yourself via this website then such information will only be used in accordance with our <a href="/privacy-policy.html">PRIVACY POLICY</a>.</li>
+					<li>You must not submit any material or information to this website which may in any way infringe any statute, regulation or bye-law of any jurisdiction, may breach the intellectual property rights or other rights of any third party, or may be defamatory, obscene or indecent.</li>
+					<li>Any electronic communication sent by you to us by means of this website is at your own risk.</li>
+					<li>Any software which may be from time to time downloaded by you from this website is at your own risk.</li>
+					<li>We may change any part of this website and any information in it without notice to you including changes to these terms and conditions and your continued use of this website after changes are posted constitutes your acceptance of the amended terms.</li>
+					<li>In the event that this website contains links to other websites and to the material contained on other websites, we are not responsible for the content of such websites and disclaim all liability in respect of such content.</li>
+					<li>The server on which this website is maintained is located in the United Kingdom and the information delivered via this website is deemed to have been delivered in the United Kingdom.</li>
+					<li>These terms and conditions and your use of this website are governed by and shall be construed in accordance with the law of England and Wales and shall be subject to the exclusive jurisdiction of the English courts.</li>					
+				</ol>
 			</div>
 		</section>
 
-		<section class="SDeasy">
-				<h2>AEQUOS ENSURES THAT	YOUR NETWORKING DECISIONS	ARE INFORMED, SUSTAINABLE AND	TUNED TO BUSINESS OBJECTIVES.</h2>
-		</section>
-
-		<section id="aboutUsIconsSection">
-			<div class="aboutUsIcons">
-				<img alt="specialist industry insight icon" class="aboutIcons" src="images/specialist.png">
-				<h3>SPECIALIST</h3>
-				<p>Our specialist industry insight and proven models fast-track business success</p>
-			</div>
-			<div class="aboutUsIcons">
-				<img alt="painless transition to SD-WAN technologies icon" class="aboutIcons" src="images/painless.png">
-				<h3>PAINLESS</h3>
-				<p>We make the transition to SD-WAN technologies seamless and effective.</p>
-			</div>
-			<div class="aboutUsIcons">
-				<img alt="innovative next generation network icon" class="aboutIcons" src="images/innovative.png">
-				<h3>INNOVATIVE</h3>
-				<p>Our nextgen SD-WAN provide a solid foundation for innovation and growth.</p>
-			</div>
-			<div class="aboutUsIcons">
-				<img alt="bespoke right-sized business network icon" class="aboutIcons" src="images/bespoke.png">
-				<h3>BESPOKE</h3>			
-				<p>We focus on making sure you deploy the right-sized SD-WAN for your business. </p>
-			</div>
-		</section>
-
-		<section id="clients_section">
-			<div>
-				<h2>A FEW OF THE PARTNERS WE WORK WITH </h2>
-				<div class="clientLogos">
-					<img alt="Oxfam logo" id="oxfamLogo" src="images/oxfamLogo.png">
-					<img alt="Motorpoint logo"  id="motorLogo" src="images/motorLogo.png">
-					<img alt="Abbeyfield logo"  id="abbeyLogo" src="images/abbeyLogo.png">
-					<img alt="Safestore logo"  id="safestoreLogo" src="images/safestoreLogo.png">
-					<img alt="Pizzahut logo"  id="pizzahutLogo" src="images/pizzalogo.png">
-				</div>
-				
-			</div>
-			
-		</section>
-		<section id="contact_section">
-			<h2>GET IN TOUCH</h2>
-			<hr> 
-				<div class="contactInfo">
-					<div class="cInfoSection location">
-						<h3>WHERE WE ARE</h3>
-						<p>Advanced Technology Innovation Centre,
-								Loughborough University Science & Enterprise Park,
-								5 Oakwood Drive, Loughborough, Leicestershire,
-								LE11 3QF</p>
-								<p>Central Working Slough,
-										The Future Works,
-										2 Brunel Way, Slough, Berkshire,
-										SL1 1FQ</p>
-					</div>
-					<div class="cInfoSection emails">
-							<h3>CALL US AT</h3>
-							<p><a href="tel:0345 872 6060">0345 872 6060</a></p>
-							<h3>INFO</h3>
-							<p><a href="mailto:info@aequos.co.uk">info@aequos.co.uk</a></p>
-							<h3>TECHNICAL SUPPORT</h3>
-							<p><a href="mailto:servicedesk@aequos.co.uk">servicedesk@aequos.co.uk</a></p>
-							<h3>SALES</h3>
-							<p><a href="mailto:sales@aequos.co.uk">sales@aequos.co.uk</a></p>
-						</div>
-					<div class="cInfoSection social">
-						<h3>SOCIAL</h3>
-							<a href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
-							<a href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
-					</div>
-					<div class="infoContact">
-						<button role="navigation" aria-label="navigation to new page with a contact form" class="contactBtn"><a href="contact-us.html">Contact us <i class='fas fa-angle-right'></i></a></button>
-					</div>
-			</div>
-			</main>
-		</section>
 
 		<footer>
 			<div class="footerCont">
@@ -251,16 +176,16 @@ ga('send', 'pageview'); -->
 					<h2>AEQUOS</h2>
 					<h4 class="copyright">Copyright © 2019 AEQUOS.<br>
 					All Rights Reserved. A TFM Group Company</h4>
-					<p><a target="_blank" href="terms-of-use.html">Terms of Use</a></p>
-					<p><a target="_blank" href="privacy-policy.html">Privacy Policy</a></p>
+					<p><a href="#termsSection">Terms of Use</a></p>
+					<p>Privacy Policy</p>
 				</div>
 				<div class="sitemap">
 					<h3>AEQUOS</h3>
-					<a href="index.html">Home</a>
-					<a href="services.html" >Services</a>
-					<a href="sd-wan.html">SD-WAN</a>
+					<a href="index.html#home_section">Home</a>
+					<a href="services.html#servicesHome_section" >Services</a>
+					<a href="sd-wan.html#SDhome_section">SD-WAN</a>
 					<a href="about_us.html#servicesHome_section">About us</a>
-					<a href="news.html">News</a>
+					<a>News</a>
 					<a href="contact-us.html">Contact</a>
 				</div>
 				<div class="footerTFM">
