--- a/contact-us.html
+++ b/contact-us.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
-<title>AEQUOS - RIGHT-SIZE YOUR NETWORK</title>
+<title>AEQUOS - CONTACT US</title>
 <!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
 <!-- <script src="prefixfree.js"></script> -->
@@ -102,10 +102,10 @@ ga('send', 'pageview'); -->
 					<h3>AEQUOS</h3>
 				</div>                                                           
 				<ul>
-					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html#home_section">HOME</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html">HOME</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="sd-wan.html#SDhome_section" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="about_us.html#servicesHome_section" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="sd-wan.html" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="about_us.html" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="news.html" class="header-link">NEWS</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="contact-us.html#contactHome_section" class="header-link">CONTACT</a></li>						
 				</ul>
@@ -282,15 +282,15 @@ ga('send', 'pageview'); -->
 					<h2>AEQUOS</h2>
 					<h4 class="copyright">Copyright © 2019 AEQUOS.<br>
 					All Rights Reserved. A TFM Group Company</h4>
-					<p>Terms of Use</p>
-					<p>Privacy Policy</p>
+					<p><a target="_blank" href="terms-of-use.html">Terms of Use</a></p>
+					<p><a target="_blank" href="privacy-policy.html">Privacy Policy</a></p>
 				</div>
 				<div class="sitemap">
 					<h3>AEQUOS</h3>
 					<a href="#home_section">Home</a>
-					<a href="services.html#servicesHome_section">Services</a>
-					<a href="sd-wan.html#SDhome_section">SD-WAN</a>
-					<a href="about_us.html#servicesHome_section">About us</a>
+					<a href="services.html">Services</a>
+					<a href="sd-wan.html">SD-WAN</a>
+					<a href="about_us.html">About us</a>
 					<a href="news.html">News</a>
 					<a href="contact-us.html#contactHome_section">Contact</a>
 				</div>
