--- a/news.html
+++ b/news.html
@@ -103,10 +103,10 @@ ga('send', 'pageview'); -->
 					<h3>AEQUOS</h3>
 				</div>                                                           
 				<ul>
-					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html#home_section">HOME</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="services.html#servicesHome_section" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="sd-wan.html#SDhome_section" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="about_us.html#servicesHome_section" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html">HOME</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="sd-wan.html" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="about_us.html" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="news.html#newsHome_section" class="header-link">NEWS</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="contact-us.html" class="header-link">CONTACT</a></li>						
 				</ul>
@@ -257,15 +257,15 @@ ga('send', 'pageview'); -->
 										SL1 1FQ</p>
 					</div>
 					<div class="cInfoSection emails">
-						<h3>CALL US AT</h3>
-						<p>0345 872 6060</p>
-						<h3>INFO</h3>
-						<p>info@aequos.co.uk</p>
-						<h3>TECHNICAL SUPPORT</h3>
-						<p>servicedesk@aequos.co.uk</p>
-						<h3>SALES</h3>
-						<p>sales@aequos.co.uk</p>
-					</div>
+							<h3>CALL US AT</h3>
+							<p><a href="tel:0345 872 6060">0345 872 6060</a></p>
+							<h3>INFO</h3>
+							<p><a href="mailto:info@aequos.co.uk">info@aequos.co.uk</a></p>
+							<h3>TECHNICAL SUPPORT</h3>
+							<p><a href="mailto:servicedesk@aequos.co.uk">servicedesk@aequos.co.uk</a></p>
+							<h3>SALES</h3>
+							<p><a href="mailto:sales@aequos.co.uk">sales@aequos.co.uk</a></p>
+						</div>
 					<div class="cInfoSection social">
 						<h3>SOCIAL</h3>
 							<a href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
@@ -284,15 +284,15 @@ ga('send', 'pageview'); -->
 					<h2>AEQUOS</h2>
 					<h4 class="copyright">Copyright © 2019 AEQUOS.<br>
 					All Rights Reserved. A TFM Group Company</h4>
-					<p>Terms of Use</p>
-					<p>Privacy Policy</p>
+					<p><a target="_blank" href="terms-of-use.html">Terms of Use</a></p>
+					<p><a target="_blank" href="privacy-policy.html">Privacy Policy</a></p>
 				</div>
 				<div class="sitemap">
 					<h3>AEQUOS</h3>
-					<a href="index.html#home_section">Home</a>
-					<a href="services.html#servicesHome_section" >Services</a>
-					<a href="sd-wan.html#SDhome_section">SD-WAN</a>
-					<a href="about_us.html#servicesHome_section">About us</a>
+					<a href="index.html">Home</a>
+					<a href="services.html" >Services</a>
+					<a href="sd-wan.html">SD-WAN</a>
+					<a href="about_us.html">About us</a>
 					<a href="news.html#newsHome_section">News</a>
 					<a href="contact-us.html">Contact</a>
 				</div>
