--- a/services.html
+++ b/services.html
@@ -101,10 +101,10 @@ ga('send', 'pageview'); -->
 					<h3>AEQUOS</h3>
 				</div>                                                           
 				<ul>
-					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html#home_section">HOME</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html">HOME</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="services.html#servicesHome_section" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="sd-wan.html#SDhome_section" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="about_us.html#servicesHome_section" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="sd-wan.html" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="about_us.html" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="news.html" class="header-link">NEWS</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="contact-us.html" class="header-link">CONTACT</a></li>						
 				</ul>
@@ -197,7 +197,7 @@ ga('send', 'pageview'); -->
 					<p>In most cases, our wide range of proven carrier, capacity and resilience models transform virtually every location. Whichever level you choose, you can rely on a service that adapts to any topology and seamlessly responds to growth, peak demand and business requirements. All underpinned by a constant focus on business outcomes rather than traditional technical metrics.</p>
 					<p>Behind the technology, the people. Aequos offers the exceptional level of expertise, commitment and energy necessary to drive a truly effective network transformation.</p>
 					<p><strong>Next-generation SD-WAN technology. A proven delivery model. True expertise in our chosen sectors. Trust Aequos to deliver the scalable, sustainable and successful network services that help to achieve your key business objectives.</strong></p>
-					<a class="discoverServices">MORE ABOUT SD-WAN <i class='fas fa-angle-right'></i></a>
+					<a href="sd-wan.html" class="discoverServices">MORE ABOUT SD-WAN <i class='fas fa-angle-right'></i></a>
 				</div>
 			</div>
 		</section>
@@ -234,7 +234,7 @@ ga('send', 'pageview'); -->
 					<button aria-label="reveals contents from left to right in ascending order" class="toRightSector"><img alt="Right arrow" class="sectorsNavi rightArrow" src="images/rightwhite.png"></button>
 					<!-- <button><i class="fas fa-chevron-right"></i></button> -->
 				</div>
-				<a class="discoverServices">MORE ABOUT US <i class='fas fa-angle-right'></i></a>
+				<a href="about_us.html" class="discoverServices">MORE ABOUT US <i class='fas fa-angle-right'></i></a>
 			</div>
 			</div>
 		</section>
@@ -269,15 +269,15 @@ ga('send', 'pageview'); -->
 										SL1 1FQ</p>
 					</div>
 					<div class="cInfoSection emails">
-						<h3>CALL US AT</h3>
-						<p>0345 872 6060</p>
-						<h3>INFO</h3>
-						<p>info@aequos.co.uk</p>
-						<h3>TECHNICAL SUPPORT</h3>
-						<p>servicedesk@aequos.co.uk</p>
-						<h3>SALES</h3>
-						<p>sales@aequos.co.uk</p>
-					</div>
+							<h3>CALL US AT</h3>
+							<p><a href="tel:0345 872 6060">0345 872 6060</a></p>
+							<h3>INFO</h3>
+							<p><a href="mailto:info@aequos.co.uk">info@aequos.co.uk</a></p>
+							<h3>TECHNICAL SUPPORT</h3>
+							<p><a href="mailto:servicedesk@aequos.co.uk">servicedesk@aequos.co.uk</a></p>
+							<h3>SALES</h3>
+							<p><a href="mailto:sales@aequos.co.uk">sales@aequos.co.uk</a></p>
+						</div>
 					<div class="cInfoSection social">
 						<h3>SOCIAL</h3>
 							<a href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
@@ -296,16 +296,16 @@ ga('send', 'pageview'); -->
 					<h2>AEQUOS</h2>
 					<h4 class="copyright">Copyright © 2019 AEQUOS.<br>
 					All Rights Reserved. A TFM Group Company</h4>
-					<p>Terms of Use</p>
-					<p>Privacy Policy</p>
+					<p><a target="_blank" href="terms-of-use.html">Terms of Use</a></p>
+					<p><a target="_blank" href="privacy-policy.html">Privacy Policy</a></p>
 				</div>
 				<div class="sitemap">
 					<h3>AEQUOS</h3>
-					<a href="index.html#home_section">Home</a>
+					<a href="index.html">Home</a>
 					<a href="services.html#servicesHome_section" >Services</a>
-					<a href="sd-wan.html#SDhome_section">SD-WAN</a>
-					<a href="about_us.html#servicesHome_section">About us</a>
-					<a>News</a>
+					<a href="sd-wan.html">SD-WAN</a>
+					<a href="about_us.html">About us</a>
+					<a href="news.html">News</a>
 					<a href="contact-us.html">Contact</a>
 				</div>
 				<div class="footerTFM">
