modififed contact us page and contact footer

--- a/about_us.html
+++ b/about_us.html
@@ -222,25 +222,25 @@ ga('send', 'pageview'); -->
 										The Future Works,
 										2 Brunel Way, Slough, Berkshire,
 										SL1 1FQ</p>
-					</div>
-					<div class="cInfoSection emails">
-							<h3>CALL US AT</h3>
-							<p><a href="tel:0345 872 6060">0345 872 6060</a></p>
-							<h3>INFO</h3>
-							<p><a href="mailto:info@aequos.co.uk">info@aequos.co.uk</a></p>
-							<h3>TECHNICAL SUPPORT</h3>
-							<p><a href="mailto:servicedesk@aequos.co.uk">servicedesk@aequos.co.uk</a></p>
-							<h3>SALES</h3>
-							<p><a href="mailto:sales@aequos.co.uk">sales@aequos.co.uk</a></p>
-						</div>
-					<div class="cInfoSection social">
-						<h3>SOCIAL</h3>
-							<a href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
-							<a href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
-					</div>
-					<div class="infoContact">
-						<button role="navigation" aria-label="navigation to new page with a contact form" class="contactBtn"><a href="contact-us.html">Contact us <i class='fas fa-angle-right'></i></a></button>
-					</div>
+										<img class="small_qualif" src="images/Cyber_Essentials_Badge_High_Res.png" alt="Cyber Essentials Badge" title="Cyber_Essentials_Badge"/>
+									</div>
+									<div class="cInfoSection emails">
+										<h3>CALL US AT</h3>
+										<p><a href="tel:0345 872 6060">0345 872 6060</a></p>
+										<h3>INFO</h3>
+										<p><a href="mailto:info@aequos.co.uk">info@aequos.co.uk</a></p>
+										<h3>TECHNICAL SUPPORT</h3>
+										<p><a href="mailto:servicedesk@aequos.co.uk">servicedesk@aequos.co.uk</a></p>
+										<h3>SALES</h3>
+										<p><a href="mailto:sales@aequos.co.uk">sales@aequos.co.uk</a></p>
+										
+										<p class="contactLinkFooter"><a href="contact-us.html" aria-label="navigation to new page with a contact form" >Contact us <i class="fas fa-angle-right"></i></a></p>
+									</div>
+									<div class="cInfoSection social">
+										<h3>SOCIAL</h3>
+											<a href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
+											<a href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
+									</div>
 			</div>
 			</main>
 		</section>
